--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,7 +30,7 @@ jobs:
         python -m pip install --upgrade pip
         pip3 install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Install robotspy
+    - name: Install latae
       run: |
         python3 setup.py develop
     - name: Test with pytest
